src/objects/Event_Expenses__c.object
<CustomObject>
    <description>Used on OAS Application for to track expenses related to the Event Approval object.</description>
    <fields>
        <fullName>EA_Actual_Amount__c</fullName>
        <description>Used for Conference Expense object attached to the OAS application and referenced in the Event Approval Object.</description>
        <inlineHelpText>After the Conference or Ceremony is over, please enter the actual expenditure here.</inlineHelpText>
        <label>Actual Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Service_Charges__c</fullName>
        <label>Actual Service Charges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Taxes__c</fullName>
        <label>Actual Taxes</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Amount__c</fullName>
        <description>Used for Conference Expense object attached to the OAS application and referenced in the Event Approval Object.</description>
        <inlineHelpText>Please enter the estimated amount for this expense.</inlineHelpText>
        <label>Estimated Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Service_Charge__c</fullName>
        <label>Estimated Service Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Taxes__c</fullName>
        <label>Estimated Taxes</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_IF_Other_Explain__c</fullName>
        <description>Used in the Event Expense object under the Event Approval Application</description>
        <inlineHelpText>Other includes all other event support costs.</inlineHelpText>
        <label>IF Other, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EA_Payee__c</fullName>
        <description>Used for Conference Expense object attached to the OAS application and referenced in the Event Approval Object.</description>
        <label>Payee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Prohibited_Expenses__c</fullName>
        <defaultValue>&quot;Including but not limited to ENTERTAINMENT - Spending government funds to pay for bands, comedians, clowns, and other entertainment purposes, including gambling, is prohibited.... GIFTS - Government funds may not be used to purchase items to be given away as gifts except when such items serve  as promotional....KEEPSAKES - Government funds may not be spent on keepsake items such as memory books, coins, and other similar mementos....CLOTHING - Unless provided for specifically by statute, government funds may not be used to purchase clothing....SPORTING EQUIPMENT- Government funds may not be used to purchase sporting equipment.&quot;</defaultValue>
        <label>Prohibited Expenses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_Total_Actual_Amount__c</fullName>
        <formula>EA_Actual_Amount__c  +  EA_Actual_Taxes__c  +  EA_Actual_Service_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Total_Estimated_Amount__c</fullName>
        <formula>EA_Estimated_Amount__c  +  EA_Estimated_Taxes__c  +  EA_Estimated_Service_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Identifier__c</fullName>
        <description>Used on the Event Expenses object to build a Master Detal relationship between Event Approvals and Event Expenses.</description>
        <label>Event Identifier</label>
        <referenceTo>Event_Approval__c</referenceTo>
        <relationshipLabel>Event Expenses</relationshipLabel>
        <relationshipName>Event_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Event_Identifier__r.EA_Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <description>Used for Conference Expense object attached to the OAS application and referenced in the Event Approval Object.</description>
        <label>Expense Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Food or Beverages</fullName>
                </value>
                <value>
                    <fullName>Audio-Visual</fullName>
                </value>
                <value>
                    <fullName>Venue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Sub_Category__c</fullName>
        <description>Used for Conference Expense object attached to the OAS application and referenced in the Event Approval Object.</description>
        <label>Expense Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Meeting Expenses</fullName>
                </value>
                <value>
                    <fullName>Decorations</fullName>
                </value>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Brochures</fullName>
                </value>
                <value>
                    <fullName>Mailing Lists</fullName>
                </value>
                <value>
                    <fullName>Postage</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Press Kits</fullName>
                </value>
                <value>
                    <fullName>Photographs</fullName>
                </value>
                <value>
                    <fullName>Media Room/Setup</fullName>
                </value>
                <value>
                    <fullName>Audio-Visual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Lodging For GSA Attendees</fullName>
                </value>
                <value>
                    <fullName>Meeting Rooms</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Travel For GSA Attendees</fullName>
                </value>
                <value>
                    <fullName>Shuttle/Taxi Costs for GSA Attendees</fullName>
                </value>
                <value>
                    <fullName>Staff Travel</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Conference/Meeting Coordinator</fullName>
                </value>
                <value>
                    <fullName>Mementos</fullName>
                </value>
                <value>
                    <fullName>Meal(S)</fullName>
                </value>
                <value>
                    <fullName>Light Refreshments</fullName>
                </value>
                <value>
                    <fullName>Signage</fullName>
                </value>
                <value>
                    <fullName>Booth Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>Used for Conference Expense object attached to the OAS application and referenced in the Event Approval Object.</description>
        <inlineHelpText>Please supply a justification for this expense.</inlineHelpText>
        <label>Justification</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Event Expenses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>Event_Identifier__c</columns>
        <columns>EA_Total_Estimated_Amount__c</columns>
        <columns>EA_Total_Actual_Amount__c</columns>
        <columns>EA_Payee__c</columns>
        <columns>Justification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Expense-{00000000}</displayFormat>
        <label>Expense</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_amount_fields_validation</fullName>
        <active>true</active>
        <description>Will not allow the user to enter actual values until after the conference end date.</description>
        <errorConditionFormula>AND(Event_Identifier__r.EA_End_Date__c &gt; TODAY(),NOT(ISBLANK( EA_Actual_Amount__c )))</errorConditionFormula>
        <errorMessage>You cannot enter Actual Amounts before the event end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimated_amount_fields_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(EA_Estimated_Amount__c),
OR(ISPICKVAL(Event_Identifier__r.EA_Stage__c,&quot;Approved&quot;),
ISPICKVAL(Event_Identifier__r.EA_Stage__c,&quot;Waiting for Actuals&quot;)))</errorConditionFormula>
        <errorMessage>In order to change your estimated amounts yo must clone the conference and re-submit for approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_fill_in_reason_for_Other</fullName>
        <active>true</active>
        <description>users must fill in a reason for selecting the &quot;Other&quot; expense category</description>
        <errorConditionFormula>AND(ISPICKVAL( Expense_Category__c , &quot;Other&quot;),  ISBLANK(EA_IF_Other_Explain__c ))</errorConditionFormula>
        <errorMessage>You must provide an explanation of &quot;Other&quot; expense Categories</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_New_Expense_After_Approved</fullName>
        <active>true</active>
        <description>Will not allow a user to enter a new Event Expense once the conference has been approved or canceled</description>
        <errorConditionFormula>AND( 
OR( ISPICKVAL( Event_Identifier__r.EA_Stage__c ,&quot;Approved&quot;), 
ISPICKVAL( Event_Identifier__r.EA_Stage__c ,&quot;Canceled&quot;)), ISNEW())</errorConditionFormula>
        <errorMessage>You cannot add new expenses to an already approved or canceled conference</errorMessage>
    </validationRules>
</CustomObject>